--- a/css/styles.css
+++ b/css/styles.css
@@ -67,10 +67,14 @@ a {
     transition: all 0.2s linear;
 }
 
-    a:hover {
-        color: #FF8930;
-        text-decoration: none;
-    }
+.top {
+    padding-top: 20px;
+}
+
+a:hover {
+    color: #FF8930;
+    text-decoration: none;
+}
 
 .btn {
     border: 0px;
@@ -234,9 +238,23 @@ a {
     box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
     max-height: 600px;
     height: 600px;
-    background: url("../images/CarshowSquare.jpg") no-repeat;
+    background: url("../images/CarshowSquareCropped.jpg") no-repeat;
     background-size: 100% 100%;
     background-size: cover;
+}
+
+.float-image-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+.float-image {
+    position: absolute;
+    height: 75%;
 }
 
 .bannerOverlay {
@@ -758,4 +776,69 @@ footer {
         display: inline-block;
         margin: 0 0 23px 5px;
     }
+}
+
+.facebook-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3b5998; /* Facebook blue */
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: 300px;
+    margin: 20px auto;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+.facebook-link a {
+    display: flex;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+}
+
+.facebook-link img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.facebook-link span {
+    font-weight: bold;
+}
+
+.email-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #0073e6; /* A blue color */
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: 400px;
+    margin: 20px auto;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+.email-link a {
+    display: flex;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+}
+
+.email-link img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.email-link span {
+    font-weight: bold;
+    user-select: text; /* Make the email address selectable */
 }
