--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,9 @@ a:hover {
     font-size: 1.2em;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+.navbar-inverse .navbar-nav > .active > a, 
+.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:focus {
     color: #fff;
     background-color: #fb6c00;
 }
